Bug 244598 - try to move a folder to a place where a folder with this name already exists, unknown error message.
Summary: try to move a folder to a place where a folder with this name already exists,...
Status: VERIFIED FIXED
Alias: None
Product: KDE PIM Mobile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Maemo 5 Linux
: NOR normal
Target Milestone: ---
Assignee: Bjoern Ricks
URL:
Keywords:
: 252631 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-07-14 12:22 UTC by Ludwig Reiter
Modified: 2011-02-15 19:49 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Error Dialog (66.49 KB, image/png)
2010-09-17 17:49 UTC, Bjoern Ricks
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2010-07-14 12:22:11 UTC
Version:           unspecified (using Devel) 
OS:                Linux

version: 4.4.4.e5.20100709.1148005-kk1.1149023


Reproducible: Always

Steps to Reproduce:
1. Create a folder with name "test1"
2. Copy this folder to the local folders.
3. Move this folder to the local folders.

Actual Results:  
Unknown error while moving folder appears

Expected Results:  
The user should be informed, that he tried to move a folder with same name to the local folders.
Comment 1 Bjoern Ricks 2010-09-17 17:48:50 UTC
Also occurs in Kontact Mobile.
Comment 2 Bjoern Ricks 2010-09-17 17:49:20 UTC
Created attachment 51762 [details]
Error Dialog
Comment 3 Bjoern Ricks 2010-10-04 16:21:01 UTC
*** Bug 252631 has been marked as a duplicate of this bug. ***
Comment 4 Felix Wolfsteller 2010-10-06 11:00:58 UTC
In version 4:4.5~20101001.1181693-1maemo4.1181469 , above described procedure does not result in an error message. But also it does not result in an folder creation in "Local Folders", either
Comment 5 Felix Wolfsteller 2010-10-06 11:18:52 UTC
(In reply to comment #4)
> In version 4:4.5~20101001.1181693-1maemo4.1181469 , above described procedure
> does not result in an error message. But also it does not result in an folder
> creation in "Local Folders", either

I got unknown collection errors after a while (couple of minutes). The folder was then created.
Comment 6 Bernhard E. Reiter 2011-01-20 21:16:31 UTC
Need a test to see if this also happens on CE. The "unkown error" message
is in English an unsettling to users, this is why I believe this is priority normal.
Comment 7 Tobias Koenig 2011-02-09 13:58:43 UTC
Git commit cb86eff401032fb2b8b2e20c43e02d4968ab799b by Tobias Koenig.
Committed on 09/02/11 at 14:00.
Pushed by tokoe into branch 'komo3'.

Show error for name conflicts on move/copy

Show an error messagebox if a collection is moved or copied
to a collection that contains a child collection with the same
name already. This allows us to provide a better error message
than the default one from the failing CollectionMoveJob.

BUG: 244598

M  +9    -0    akonadi/collection.cpp     
M  +21   -1    akonadi/collection.h     
M  +13   -1    akonadi/entitytreemodel.cpp     
M  +14   -0    akonadi/entitytreemodel_p.cpp     
M  +6    -0    akonadi/entitytreemodel_p.h     

http://commits.kde.org/kdepimlibs/cb86eff401032fb2b8b2e20c43e02d4968ab799b