Show error for name conflicts on move/copy

Show an error messagebox if a collection is moved or copied
to a collection that contains a child collection with the same
name already. This allows us to provide a better error message
than the default one from the failing CollectionMoveJob.

BUG: 244598